# Machine-Learning

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
Asexual_reproduction_simulation/: CMakeLists.txt  main.cpp
Benchmarker/: CMakeLists.txt  benchmarker.cpp  benchmarker.h
Feed_forward_NEAT/: CMakeLists.txt  NEAT.cpp  NEAT.h  calculator.cpp  calculator.h  evaluator.cpp  evaluator.h
Feed_forward_NEAT/benchmarks/: CMakeLists.txt  benchmark_neat.cpp
Feed_forward_NEAT/unit_tests/: CMakeLists.txt  NetworkEvaluationTests.cpp
Number_recognizer/: CMakeLists.txt  Number_recognizer.cpp  Number_recognizer.h  image_data.cpp  image_data.h  phm_app.cpp  phm_app.h  phm_device.h  phm_model.cpp  phm_utils.cpp  phm_utils.h  simple_render_system.cpp
Xor_NEAT/: CMakeLists.txt  evaluator_xor.cpp  evaluator_xor.h  main.cpp
Xor_NEAT/unit_tests/: CMakeLists.txt  XorVerifierTests.cpp
