# CMakeList.txt : CMake project for Machine Learning, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Number_recognizer "Number_recognizer.cpp" "Number_recognizer.h")

# TODO: Add tests and install targets if needed.
